I'm using dirmngr 2.1.17 with use-tor, plus git commit
b200e636ab20d2aa93d9f71f3789db5a04af0a56 with the default keyserver of
hkps://hkps.pool.sks-keyservers.net. over in https://bugs.debian.org/849845 , i
observed:
The remaining problem for me ws that when i use tor, if i get back AAAA
records, the connections fail, but the IPv6 records are not marked as
dead, so they fail repeatedly.I don't think any version of Tor can currently do IPv6, so when using tor, the
nameserver selection should ignore v6 addresses.